--- a/guides/config.html
+++ b/guides/config.html
@@ -29,23 +29,23 @@
 
         <h2 id="structure">Structure</h2>
         <p>Compile&#8209;time constants rarely change and are defined at the top of <code>config.go</code>. Environment specific values such as the TCP port or Mailgun credentials are read with <code>os.Getenv</code> so they can be supplied at runtime.</p>
-        <pre><code class="highlight go">var JOB_QUEUE_NUM_WORKERS = 4
-var PORT            = os.Getenv("PORT")
-var MAILGUN_DOMAIN  = os.Getenv("MAILGUN_DOMAIN")
-var MAILGUN_API_KEY = os.Getenv("MAILGUN_API_KEY")
-var SECRET_KEY      = os.Getenv("SECRET_KEY")
+        <pre><code class="highlight go"><span class="keyword">var</span> <span class="variable">JOB_QUEUE_NUM_WORKERS</span> = <span class="number">4</span>
+<span class="keyword">var</span> <span class="variable">PORT</span>            = <span class="function">os</span>.<span class="function">Getenv</span>(<span class="string">"PORT"</span>)
+<span class="keyword">var</span> <span class="variable">MAILGUN_DOMAIN</span>  = <span class="function">os</span>.<span class="function">Getenv</span>(<span class="string">"MAILGUN_DOMAIN"</span>)
+<span class="keyword">var</span> <span class="variable">MAILGUN_API_KEY</span> = <span class="function">os</span>.<span class="function">Getenv</span>(<span class="string">"MAILGUN_API_KEY"</span>)
+<span class="keyword">var</span> <span class="variable">SECRET_KEY</span>      = <span class="function">os</span>.<span class="function">Getenv</span>(<span class="string">"SECRET_KEY"</span>)
 </code></pre>
 
         <h2 id="initialisation">Initialisation</h2>
         <p>Call <code>config.InitConfig()</code> early in <code>main.go</code> to apply defaults and log warnings when required variables are missing. This function sets sensible fallbacks so the app can run in development without additional setup.</p>
-        <pre><code class="highlight go">func InitConfig() {
-    if SECRET_KEY == "" {
-        slog.Warn("SECRET_KEY is not set, using default value. This is insecure for production use.")
-        SECRET_KEY = "default_secret_key"
+        <pre><code class="highlight go"><span class="keyword">func</span> <span class="function">InitConfig</span>() {
+    <span class="keyword">if</span> <span class="variable">SECRET_KEY</span> <span class="operator">==</span> <span class="string">""</span> {
+        <span class="function">slog</span>.<span class="function">Warn</span>(<span class="string">"SECRET_KEY is not set, using default value. This is insecure for production use."</span>)
+        <span class="variable">SECRET_KEY</span> = <span class="string">"default_secret_key"</span>
     }
-    if PORT == "" {
-        slog.Info("PORT is not set, using default value: 9000")
-        PORT = "9000"
+    <span class="keyword">if</span> <span class="variable">PORT</span> <span class="operator">==</span> <span class="string">""</span> {
+        <span class="function">slog</span>.<span class="function">Info</span>(<span class="string">"PORT is not set, using default value: 9000"</span>)
+        <span class="variable">PORT</span> = <span class="string">"9000"</span>
     }
 }
 </code></pre>
@@ -54,7 +54,7 @@ var SECRET_KEY      = os.Getenv("SECRET_KEY")
         <p>The command line generators automatically wire new code to the configuration package. For example, running:</p>
         <pre><code class="highlight console">$ make generator authentication</code></pre>
         <p>creates session helpers that rely on <code>config.SECRET_KEY</code>:</p>
-        <pre><code class="highlight go">store = sessions.NewCookieStore([]byte(config.SECRET_KEY))</code></pre>
+        <pre><code class="highlight go"><span class="variable">store</span> = <span class="function">sessions</span>.<span class="function">NewCookieStore</span>(<span class="function">[]byte</span>(<span class="function">config</span>.<span class="variable">SECRET_KEY</span>))</code></pre>
         <p>Similarly, <code>make generator job Email</code> scaffolds a job that can use <code>MAILGUN_DOMAIN</code> and <code>MAILGUN_API_KEY</code> to send email.</p>
 
         <h2 id="environment-variables">Environment Variables</h2>
