--- a/guides/models.html
+++ b/guides/models.html
@@ -38,53 +38,53 @@
 
         <h2 id="crud-helpers">CRUD Helpers</h2>
         <p>Generated models expose simple functions for common operations. For example the <code>Post</code> model created above includes:</p>
-        <pre><code class="highlight go">func CreatePost(db *gorm.DB, p *Post) error {
-    return db.Create(p).Error
+        <pre><code class="highlight go"><span class="keyword">func</span> <span class="function">CreatePost</span>(<span class="variable">db</span> <span class="operator">*</span><span class="type">gorm</span>.<span class="type">DB</span>, <span class="variable">p</span> <span class="operator">*</span><span class="type">Post</span>) <span class="type">error</span> {
+    <span class="keyword">return</span> <span class="variable">db</span>.<span class="function">Create</span>(<span class="variable">p</span>).<span class="variable">Error</span>
 }
 
-func GetPostByID(db *gorm.DB, id uint) (*Post, error) {
-    var p Post
-    if err := db.First(&p, id).Error; err != nil {
-        return nil, err
+<span class="keyword">func</span> <span class="function">GetPostByID</span>(<span class="variable">db</span> <span class="operator">*</span><span class="type">gorm</span>.<span class="type">DB</span>, <span class="variable">id</span> <span class="type">uint</span>) (<span class="operator">*</span><span class="type">Post</span>, <span class="type">error</span>) {
+    <span class="keyword">var</span> <span class="variable">p</span> <span class="type">Post</span>
+    <span class="keyword">if</span> <span class="variable">err</span> <span class="operator">:=</span> <span class="variable">db</span>.<span class="function">First</span>(<span class="operator">&</span><span class="variable">p</span>, <span class="variable">id</span>).<span class="variable">Error</span>; <span class="variable">err</span> <span class="operator">!=</span> <span class="constant">nil</span> {
+        <span class="keyword">return</span> <span class="constant">nil</span>, <span class="variable">err</span>
     }
-    return &p, nil
+    <span class="keyword">return</span> <span class="operator">&</span><span class="variable">p</span>, <span class="constant">nil</span>
 }
 
-func GetAllPosts(db *gorm.DB) ([]Post, error) {
-    var ps []Post
-    if err := db.Find(&ps).Error; err != nil {
-        return nil, err
+<span class="keyword">func</span> <span class="function">GetAllPosts</span>(<span class="variable">db</span> <span class="operator">*</span><span class="type">gorm</span>.<span class="type">DB</span>) (<span class="operator">[]</span><span class="type">Post</span>, <span class="type">error</span>) {
+    <span class="keyword">var</span> <span class="variable">ps</span> <span class="operator">[]</span><span class="type">Post</span>
+    <span class="keyword">if</span> <span class="variable">err</span> <span class="operator">:=</span> <span class="variable">db</span>.<span class="function">Find</span>(<span class="operator">&</span><span class="variable">ps</span>).<span class="variable">Error</span>; <span class="variable">err</span> <span class="operator">!=</span> <span class="constant">nil</span> {
+        <span class="keyword">return</span> <span class="constant">nil</span>, <span class="variable">err</span>
     }
-    return ps, nil
+    <span class="keyword">return</span> <span class="variable">ps</span>, <span class="constant">nil</span>
 }</code></pre>
         <p>Feel free to extend these helpers or call GORM directly. The database handle is obtained through <code>db.GetDB()</code>.</p>
 
         <h2 id="hooks-and-validations">Hooks &amp; Validations</h2>
         <p>Each generated file contains blank <code>BeforeSave</code> and <code>AfterSave</code> methods. Implement these to enforce validations or trigger side effects. A simple validation might look like:</p>
-        <pre><code class="highlight go">func (p *Post) BeforeSave(tx *gorm.DB) error {
-    if strings.TrimSpace(p.Title) == "" {
-        return errors.New("title is required")
+        <pre><code class="highlight go"><span class="keyword">func</span> (<span class="variable">p</span> <span class="operator">*</span><span class="type">Post</span>) <span class="function">BeforeSave</span>(<span class="variable">tx</span> <span class="operator">*</span><span class="type">gorm</span>.<span class="type">DB</span>) <span class="type">error</span> {
+    <span class="keyword">if</span> <span class="function">strings</span>.<span class="function">TrimSpace</span>(<span class="variable">p</span>.<span class="variable">Title</span>) <span class="operator">==</span> <span class="string">""</span> {
+        <span class="keyword">return</span> <span class="function">errors</span>.<span class="function">New</span>(<span class="string">"title is required"</span>)
     }
-    return nil
+    <span class="keyword">return</span> <span class="constant">nil</span>
 }</code></pre>
         <p>GORM calls these hooks automatically when you create or update records.</p>
 
         <h2 id="relationships">Relationships</h2>
         <p>Relations are declared using normal struct fields. For instance, if each post belongs to a user you could add:</p>
-        <pre><code class="highlight go">type Post struct {
-    gorm.Model
-    IsActive bool `gorm:"default:true"`
-    Title    string
-    Body     string
-    UserID   uint
-    User     User
+        <pre><code class="highlight go"><span class="keyword">type</span> <span class="type">Post</span> <span class="keyword">struct</span> {
+    <span class="type">gorm</span>.<span class="type">Model</span>
+    <span class="variable">IsActive</span> <span class="type">bool</span> <span class="string">`gorm:"default:true"`</span>
+    <span class="variable">Title</span>    <span class="type">string</span>
+    <span class="variable">Body</span>     <span class="type">string</span>
+    <span class="variable">UserID</span>   <span class="type">uint</span>
+    <span class="variable">User</span>     <span class="type">User</span>
 }</code></pre>
         <p>GORM understands these associations and will populate related records when you use the <code>Preload</code> method.</p>
 
         <h2 id="table-customization">Table Customization</h2>
         <p>By default GORM uses pluralized snake-case table names. To override this you can define a <code>TableName()</code> method on the model:</p>
-        <pre><code class="highlight go">func (Post) TableName() string {
-    return "blog_posts"
+        <pre><code class="highlight go"><span class="keyword">func</span> (<span class="type">Post</span>) <span class="function">TableName</span>() <span class="type">string</span> {
+    <span class="keyword">return</span> <span class="string">"blog_posts"</span>
 }</code></pre>
         <p>This is useful when integrating with an existing schema.</p>
 
@@ -99,12 +99,12 @@ func GetAllPosts(db *gorm.DB) ([]Post, error) {
 
         <h2 id="example-usage">Example Usage</h2>
         <p>Fetching all posts and rendering them in a controller might look like:</p>
-        <pre><code class="highlight go">posts, err := models.GetAllPosts(db.GetDB())
-if err != nil {
-    http.Error(w, err.Error(), http.StatusInternalServerError)
-    return
+        <pre><code class="highlight go"><span class="variable">posts</span>, <span class="variable">err</span> <span class="operator">:=</span> <span class="function">models</span>.<span class="function">GetAllPosts</span>(<span class="function">db</span>.<span class="function">GetDB</span>())
+<span class="keyword">if</span> <span class="variable">err</span> <span class="operator">!=</span> <span class="constant">nil</span> {
+    <span class="function">http</span>.<span class="function">Error</span>(<span class="variable">w</span>, <span class="variable">err</span>.<span class="function">Error</span>(), <span class="function">http</span>.<span class="constant">StatusInternalServerError</span>)
+    <span class="keyword">return</span>
 }
-views.Render(w, "posts/index.html.tmpl", map[string]any{"posts": posts})</code></pre>
+<span class="function">views</span>.<span class="function">Render</span>(<span class="variable">w</span>, <span class="string">"posts/index.html.tmpl"</span>, <span class="function">map</span>[<span class="type">string</span>]<span class="type">any</span>{<span class="string">"posts"</span>: <span class="variable">posts</span>})</code></pre>
         <p>Because models are regular Go structs you can unit test them without a database by stubbing the GORM methods you call.</p>
 
         <h2 id="migration">Automatic Migration</h2>
