--- a/guides/ws.html
+++ b/guides/ws.html
@@ -33,30 +33,30 @@
         <section id="initialization">
           <h2>Initialization</h2>
           <p>The hub is created during application startup by calling <code>ws.InitPubSub()</code> in <code>main.go</code>. This spins up a goroutine that handles subscriptions and broadcasts. The HTTP handler <code>ws.ServeWs</code> upgrades requests on <code>/ws</code> to WebSocket connections and registers each client with the hub.</p>
-<pre><code class="highlight go">// main.go
-ws.InitPubSub()
-http.HandleFunc("/ws", ws.ServeWs)</code></pre>
+<pre><code class="highlight go"><span class="comment">// main.go</span>
+<span class="function">ws</span>.<span class="function">InitPubSub</span>()
+<span class="function">http</span>.<span class="function">HandleFunc</span>(<span class="string">"/ws"</span>, <span class="function">ws</span>.<span class="function">ServeWs</span>)</code></pre>
         </section>
 
         <section id="client-usage">
           <h2>Client Usage</h2>
           <p>Clients communicate with the server by sending JSON commands. The most common are <code>subscribe</code> and <code>message</code>. Here is a minimal browser example:</p>
-<pre><code class="highlight javascript">const sock = new WebSocket("ws://localhost:9000/ws");
+<pre><code class="highlight javascript"><span class="keyword">const</span> <span class="variable">sock</span> = <span class="keyword">new</span> <span class="function">WebSocket</span>(<span class="string">"ws://localhost:9000/ws"</span>);
 
-sock.onopen = () => {
-  sock.send(JSON.stringify({command: "subscribe", identifier: "ChatChannel"}));
-  sock.send(JSON.stringify({command: "message", identifier: "ChatChannel", data: "Hello from JS!"}));
+<span class="variable">sock</span>.<span class="property">onopen</span> = () <span class="operator">=></span> {
+  <span class="variable">sock</span>.<span class="function">send</span>(<span class="function">JSON</span>.<span class="function">stringify</span>({<span class="property">command</span>: <span class="string">"subscribe"</span>, <span class="property">identifier</span>: <span class="string">"ChatChannel"</span>}));
+  <span class="variable">sock</span>.<span class="function">send</span>(<span class="function">JSON</span>.<span class="function">stringify</span>({<span class="property">command</span>: <span class="string">"message"</span>, <span class="property">identifier</span>: <span class="string">"ChatChannel"</span>, <span class="property">data</span>: <span class="string">"Hello from JS!"</span>}));
 };
 
-sock.onmessage = (ev) => console.log("received", ev.data);
+<span class="variable">sock</span>.<span class="property">onmessage</span> = (<span class="variable">ev</span>) <span class="operator">=></span> <span class="function">console</span>.<span class="function">log</span>(<span class="string">"received"</span>, <span class="variable">ev</span>.<span class="property">data</span>);
 </code></pre>
         </section>
 
         <section id="server-broadcast">
           <h2>Broadcasting from Go</h2>
           <p>Any part of the application can publish a message. The hub guarantees fan&ndash;out to all subscribers:</p>
-<pre><code class="highlight go">// send a message to every subscriber of "notifications"
-ws.HUB.Broadcast("notifications", []byte("Build finished"))
+<pre><code class="highlight go"><span class="comment">// send a message to every subscriber of "notifications"</span>
+<span class="function">ws</span>.<span class="variable">HUB</span>.<span class="function">Broadcast</span>(<span class="string">"notifications"</span>, <span class="function">[]byte</span>(<span class="string">"Build finished"</span>))
 </code></pre>
           <p><code>Broadcast</code> is safe to call from any goroutine and persists the message asynchronously.</p>
         </section>
