--- a/guides/server_management.html
+++ b/guides/server_management.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Server Management — Monolith Guides</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.4.0/mermaid.min.js"></script>
+  <script>mermaid.initialize({startOnLoad: true});</script>
 </head>
 <body class="guide">
   <header id="page-header">
